# Liupeng-202200460144-LP

./: README.md
P1/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  install.sh
P1/docs/: optimization_techniques.md  project_structure.md  usage_guide.md
P1/examples/: CMakeLists.txt
P1/examples/basic_example/: CMakeLists.txt  sm4_basic_example.c
P1/examples/benchmark/: CMakeLists.txt  sm4_benchmark.c
P1/examples/gcm_example/: CMakeLists.txt  sm4_gcm_example.c
P1/include/: sm4.h  sm4_cpu_features.h  sm4_gcm.h
P1/src/: CMakeLists.txt  sm4_cpu_features.c
P1/src/aesni/: CMakeLists.txt  sm4_aesni.c
P1/src/basic/: CMakeLists.txt  sm4_basic.c
P1/src/gcm/: CMakeLists.txt  sm4_gcm.c
P1/src/modern_inst/: CMakeLists.txt  sm4_modern_inst.c
P1/src/t_table/: CMakeLists.txt  sm4_t_table.c
P1/test/benchmark/: CMakeLists.txt  sm4_benchmark_test.c
P1/test/unit/: CMakeLists.txt  sm4_test.c
P2/: CMakeLists.txt  README.md
P2/include/: utils.h  watermark.h
P2/src/: main.cpp  utils.cpp  watermark.cpp
P2/test/: test_main.cpp
P4/: Makefile  README.md
P4/docs/: merkle_proofs.md  sm3_optimization.md
P4/include/: merkle.h  sm3.h  utils.h
P4/src/: merkle.c  sm3.c  sm3_optimized.c  utils.c
P4/test/: length_extension_test  sm3_test  test_length_extension.c  test_merkle.c  test_sm3.c
P5/: PROJECT_SUMMARY.md  README.md  main.py  requirements.txt  run_demo.py  setup.py
P5/docs/: sm2_implementation.md
P5/poc/: __init__.py  satoshi_forgery.py  signature_misuse.py
P5/sm2/: __init__.py  core.py  optimized.py  utils.py
P5/tests/: __init__.py  test_sm2_core.py
